change in appsettings

--- a/RatePrinter/appsettings.json
+++ b/RatePrinter/appsettings.json
@@ -6,5 +6,5 @@
         }
     },
     "AllowedHosts": "*",
-    "exchangeApi": "https://v6.exchangerate-api.com/v6/15e7830a272b8d4e2c1eb183/pair/"
+    "exchangeApi": "https://v6.exchangerate-api.com/v6/THE_KEY/pair/"//the access key should by from other place to be dynamic
 }
